--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = libft
 	url = git@github.com:abdelbenamara/Libft.git
 	branch = main
+[submodule "mlx"]
+	path = mlx
+	url = https://github.com/42Paris/minilibx-linux.git
